tests/miniJava/neg/005543_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { while int [] java ; }
